@@ -15,7 +15,8 @@
 SET(ZORBAUTILS_SRCS
     fatal.cpp
     properties_base.cpp
-    hashset_itemh.cpp
+    hashset_node_itemh.cpp
+    hashset_atomic_itemh.cpp
     mutex.cpp
     condition.cpp
     latch.cpp
