@@ -10,6 +10,7 @@ Optimizations:
   * Small optimization of comparison operations.
   * Improved hoist rule: tighter hoisting of expressions (also fixes bug #967428,
     which is only a performance bug)
+  * Optimized hash sets used by fn:distinct-values and nodes-distinct
 
 Bug Fixes/Other Changes:
   * Fixed bug #932314 (non-comparable values must be treated as distinct by
